# dump-ocamlformat

./: .ocamlformat  CHANGES.md  README.md  dump_ocamlformat.opam  dune-project
lib/: color.ml  color.mli  dump.ml  dump.mli  dune
test/: dune
